# ephemeral-container

./: README.md  backend.py  pyproject.toml
.github/workflows/: deploy.yml
frontend/: index.html  index.js  style.css
src/: backend.py  main.py
src/configs/: config.py
src/services/: guacamole.py  proxmox.py
